--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "swiper": "^8.4.2"
+    "react-slider-swiper": "^2.0.6",
+    "swiper": "^8.4.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
